--- a/src/components/UserProfile/index.scss
+++ b/src/components/UserProfile/index.scss
@@ -40,5 +40,19 @@
       border-radius: 19px;
       text-align: center;
     }
+    .vipv{
+      margin-top:6px;
+      box-sizing: border-box;
+      font-size: 21px;
+      font-family: PingFang SC;
+      font-weight: 500;
+      color: #fff;
+      width: 115px;
+      height: 38px;
+      line-height: 38px;
+      background: #EA4438;
+      border-radius: 19px;
+      text-align: center;
+    }
   }
 }
