--- a/src/pages/home/index.scss
+++ b/src/pages/home/index.scss
@@ -8,5 +8,15 @@
     width: 100%;
     background-color: #f2f2f2;
     border-radius: 8px;
+    padding:0;
+    margin:0;
+    &::after{
+      display: none;
+    }
+    &-bg{
+      border-radius: 8px;
+      width: 100%;
+      height: 320px;
+    }
   }
 }
