--- a/src/pages/recommend/index/index.scss
+++ b/src/pages/recommend/index/index.scss
@@ -56,6 +56,7 @@
     width: 420px;
     height: 70px;
     margin-right: 40px;
+    padding: 0 12px;
     background-color: $white-color;
   }
   &-apply {
@@ -68,6 +69,25 @@
     font-size: 28px;
     font-weight: bold;
     color: #ffffff;
-    margin-top:30px;
+    margin-top: 30px;
+  }
+  &-review {
+    @include flex-column();
+    &-body {
+      @include flex-column-center-center();
+      @include shadow-radius();
+      margin: 20px 25px 0;
+      background-color: $white-color;
+      padding: 100px 0;
+    }
+    &-bg {
+      width: 240px;
+    }
+    &-pending {
+      margin-top: 50px;
+      font-size: 28px;
+      font-weight: bold;
+      color: #666666;
+    }
   }
 }
